[Front, Back] Json to Aasx : modelType 오류 해결